@@ -63,8 +63,9 @@ std::unique_ptr<http::user_agent::response>
         if (authentication()) authentication()(req);
 
         network_connection cnx(req.address().server(), req.address().port());
-        if (req.address().protocol() == ascii_printable_string("https"))
-            cnx.start_ssl();
+        if (req.address().protocol() == "https") {
+            cnx.start_ssl(req.address().server().name());
+        }
 
         std::stringstream buffer;
         buffer << coerce<utf8_string>(req.method()).underlying() << " "
