@@ -1,3 +1,6 @@
+2019-11-02  Kirit Saelensminde  <kirit@felspar.com>
+ Add option to verify server certificates on the network connection and force UA to use it
+
 2019-07-17  Kirit Saelensminde  <kirit@felspar.com>
  Add a way to stop a web server instance.
 
